--- a/index.html
+++ b/index.html
@@ -6,79 +6,88 @@ import { motion } from "framer-motion";
 
 const BankSecurityProject = () => {
   return (
-    <div className="min-h-screen bg-gray-100 p-6">
+    <div className="min-h-screen bg-gradient-to-r from-blue-100 via-white to-blue-100 p-6">
       <motion.div
         className="text-center mb-10"
         initial={{ opacity: 0, y: -20 }}
         animate={{ opacity: 1, y: 0 }}
         transition={{ duration: 0.5 }}
       >
-        <h1 className="text-4xl font-bold text-blue-600">Bank Security Project</h1>
-        <p className="text-lg text-gray-600 mt-2">
-          Enhancing security and designing efficient banking solutions.
+        <h1 className="text-5xl font-extrabold text-blue-800">Bank Security Project</h1>
+        <p className="text-lg text-gray-700 mt-2">
+          A modern platform for secure and efficient banking solutions.
         </p>
       </motion.div>
 
       <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {/* Feature Card 1 */}
-        <Card className="shadow-lg">
+        <Card className="shadow-lg border border-gray-200">
           <CardContent>
-            <h2 className="text-xl font-semibold">User Authentication</h2>
+            <h2 className="text-xl font-semibold text-blue-700">User Authentication</h2>
             <p className="text-gray-600 mt-2">
               Implement secure login systems with multi-factor authentication.
             </p>
-            <Button className="mt-4 w-full">Learn More</Button>
+            <Button className="mt-4 w-full bg-blue-600 text-white hover:bg-blue-700">
+              Learn More
+            </Button>
           </CardContent>
         </Card>
 
         {/* Feature Card 2 */}
-        <Card className="shadow-lg">
+        <Card className="shadow-lg border border-gray-200">
           <CardContent>
-            <h2 className="text-xl font-semibold">Data Encryption</h2>
+            <h2 className="text-xl font-semibold text-blue-700">Data Encryption</h2>
             <p className="text-gray-600 mt-2">
               Protect sensitive user data with end-to-end encryption.
             </p>
-            <Button className="mt-4 w-full">Learn More</Button>
+            <Button className="mt-4 w-full bg-blue-600 text-white hover:bg-blue-700">
+              Learn More
+            </Button>
           </CardContent>
         </Card>
 
         {/* Feature Card 3 */}
-        <Card className="shadow-lg">
+        <Card className="shadow-lg border border-gray-200">
           <CardContent>
-            <h2 className="text-xl font-semibold">Fraud Detection</h2>
+            <h2 className="text-xl font-semibold text-blue-700">Fraud Detection</h2>
             <p className="text-gray-600 mt-2">
               Use AI-driven algorithms to detect and prevent fraudulent activity.
             </p>
-            <Button className="mt-4 w-full">Learn More</Button>
+            <Button className="mt-4 w-full bg-blue-600 text-white hover:bg-blue-700">
+              Learn More
+            </Button>
           </CardContent>
         </Card>
       </div>
 
       {/* Contact Form */}
       <motion.div
-        className="mt-12 bg-white p-6 rounded-lg shadow-md max-w-md mx-auto"
+        className="mt-12 bg-white p-6 rounded-lg shadow-md max-w-md mx-auto border border-gray-300"
         initial={{ opacity: 0, scale: 0.9 }}
         animate={{ opacity: 1, scale: 1 }}
         transition={{ duration: 0.5 }}
       >
-        <h2 className="text-2xl font-bold text-center mb-4">Contact Us</h2>
+        <h2 className="text-2xl font-bold text-center text-blue-800 mb-4">Contact Us</h2>
         <form>
           <Input
             type="text"
             placeholder="Your Name"
-            className="mb-4 w-full"
+            className="mb-4 w-full border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"
           />
           <Input
             type="email"
             placeholder="Your Email"
-            className="mb-4 w-full"
+            className="mb-4 w-full border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"
           />
           <Input
             type="text"
             placeholder="Your Message"
-            className="mb-4 w-full"
+            className="mb-4 w-full border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"
           />
-          <Button type="submit" className="w-full">
+          <Button
+            type="submit"
+            className="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700"
+          >
             Submit
           </Button>
         </form>
