--- a/dashboard.html
+++ b/dashboard.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure Online Banking - Home</title>
+    <title>Dashboard - Secure Online Banking</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Secure Online Banking</h1>
+        <h1>User Dashboard</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="transactions.html">Transactions</a></li>
             </ul>
         </nav>
@@ -20,8 +20,10 @@
     
     <main>
         <section>
-            <h2>Your trusted online banking platform</h2>
-            <p>Access your account, make transactions, and manage your finances securely.</p>
+            <h2>Account Overview</h2>
+            <p>Balance: <strong>$1000.00</strong></p>
+            <p>Last transaction: <strong>$200.00 transfer</strong></p>
+            <a href="transactions.html">Make a Transaction</a>
         </section>
     </main>
     
