--- a/login.html
+++ b/login.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure Online Banking - Home</title>
+    <title>Login - Secure Online Banking</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Secure Online Banking</h1>
+        <h1>Login to Your Account</h1>
         <nav>
             <ul>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="transactions.html">Transactions</a></li>
             </ul>
@@ -20,8 +20,15 @@
     
     <main>
         <section>
-            <h2>Your trusted online banking platform</h2>
-            <p>Access your account, make transactions, and manage your finances securely.</p>
+            <form id="loginForm">
+                <label for="username">Username:</label>
+                <input type="text" id="username" placeholder="Enter your username" required>
+
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="Enter your password" required>
+
+                <button type="submit">Login</button>
+            </form>
         </section>
     </main>
     
