--- a/transaction.html
+++ b/transaction.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure Online Banking - Home</title>
+    <title>Transactions - Secure Online Banking</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Secure Online Banking</h1>
+        <h1>Transactions</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="transactions.html">Transactions</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <section>
-            <h2>Your trusted online banking platform</h2>
-            <p>Access your account, make transactions, and manage your finances securely.</p>
+            <h2>Make a Transaction</h2>
+            <form id="transactionForm">
+                <label for="recipient">Recipient Username:</label>
+                <input type="text" id="recipient" placeholder="Enter recipient username" required>
+
+                <label for="amount">Amount:</label>
+                <input type="number" id="amount" placeholder="Enter amount" required>
+
+                <button type="submit">Transfer</button>
+            </form>
         </section>
     </main>
     
